[package]
name = "swift-demangle"
version = "0.0.2"
authors = ["Eugene Hauptmann <e@eugenehp.de>"]
edition = "2018"
links = "swiftCore"
repository = "https://github.com/eugenehp/swift-demangle"
description = "A Swift Demangle function in Rust"
keywords = ["cli", "swift", "demangle", "runtime"]
license = "MIT"
categories = ["command-line-utilities"]